@@ -21,6 +21,16 @@
       <element value="News Item"/>
       <element value="Topic"/>
     </property>
+    <property name="alias_whitelist" type="lines">
+      <element value="Document"/>
+      <element value="Event"/>
+      <element value="File"/>
+      <element value="Folder"/>
+      <element value="Image"/>
+      <element value="Link"/>
+      <element value="News Item"/>
+      <element value="Topic"/>
+    </property>
     <property name="alias_search_limit" type="int">50</property>
   </object>
 </object>
